--- a/packages/core/system/server/views/includes/head.html
+++ b/packages/core/system/server/views/includes/head.html
@@ -7,19 +7,17 @@
 
   <title>{{appName}}</title>
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-  <meta name="keywords" content="node.js, express, mongoose, mongodb, angularjs, swig">
+  <meta name="keywords" content="beer measurements analysis statistics wine liquor alcohol drinking game">
   <meta name="description" content="Beerkeeper - The social drinking network. Keep track of what you drink. Analyse the statistics. Compare them with friends!">
 
-  <meta property="fb:app_id" content="APP_ID">
+<!--  <meta property="fb:app_id" content="APP_ID">-->
   <meta property="og:title" content="{{appName}}">
   <meta property="og:description" content="The social drinking network">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="beerkeeper.net">
+  <meta property="og:url" content="www.beerkeeper.net">
   <meta property="og:image" content="APP_LOGO">
   <meta property="og:site_name" content="Beerkeeper">
-  <meta property="fb:admins" content="APP_ADMIN">
-
-  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
+<!--  <meta property="fb:admins" content="APP_ADMIN">-->
 
   {% for file in aggregatedassets.header.css %}
     <link rel="stylesheet" href="{{file}}">
