--- a/packages/core/system/server/views/includes/head.html
+++ b/packages/core/system/server/views/includes/head.html
@@ -1,35 +1,38 @@
 <head>
-  <base href="/">
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="fragment" content="!">
+    <base href="/">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="fragment" content="!">
 
-  <title>{{appName}}</title>
-  <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-  <meta name="keywords" content="beer measurements analysis statistics wine liquor alcohol drinking game">
-  <meta name="description" content="Beerkeeper - The social drinking network. Keep track of what you drink. Analyse the statistics. Compare them with friends!">
+    <title>{{appName}}</title>
+    <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+    <meta name="keywords" content="beer measurements analysis statistics wine liquor alcohol drinking game">
+    <meta name="description"
+          content="Beerkeeper - The social drinking network. Keep track of what you drink. Analyse the statistics. Compare them with friends!">
 
-<!--  <meta property="fb:app_id" content="APP_ID">-->
-  <meta property="og:title" content="{{appName}}">
-  <meta property="og:description" content="The social drinking network">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="www.beerkeeper.net">
-  <meta property="og:image" content="APP_LOGO">
-  <meta property="og:site_name" content="Beerkeeper">
-<!--  <meta property="fb:admins" content="APP_ADMIN">-->
+    <!--  <meta property="fb:app_id" content="APP_ID">-->
+    <meta property="og:title" content="{{appName}}">
+    <meta property="og:description" content="The social drinking network">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="www.beerkeeper.net">
+    <meta property="og:image" content="APP_LOGO">
+    <meta property="og:site_name" content="Beerkeeper">
+    <!--  <meta property="fb:admins" content="APP_ADMIN">-->
 
-  {% for file in aggregatedassets.header.css %}
+    <link rel="stylesheet" href="/ddb/assets/css/bootstrap.css">
+
+    {% for file in aggregatedassets.header.css %}
     <link rel="stylesheet" href="{{file}}">
-  {% endfor %}
+    {% endfor %}
 
-  {% for file in aggregatedassets.footer.css %}
+    {% for file in aggregatedassets.footer.css %}
     <link rel="stylesheet" href="{{file}}">
-  {% endfor %}
+    {% endfor %}
 
-  {% for file in aggregatedassets.header.js %}
+    {% for file in aggregatedassets.header.js %}
     <script type="text/javascript" src="{{file}}"></script>
-  {% endfor %}
+    {% endfor %}
 
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
