--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -17,30 +17,34 @@
                         <table class="table table-striped ">
                             <tbody>
                             <tr>
+                                <th>Number of days recorded</th>
+                                <td class="text-right">{{profile.activeDays}}</td>
+                            </tr>
+                            <tr>
                                 <th>Percentage drinking days</th>
-                                <td>{{profile.drinkingDayRate | number:2}}%</td>
+                                <td class="text-right">{{profile.drinkingDayRate * 100| number:0}}%</td>
                             </tr>
                             <tr>
                                 <th>Heaviest binge</th>
-                                <td>{{profile.highestBinge | number:2}} cl ({{profile.highestBingeDate |
+                                <td class="text-right">{{profile.highestBinge | number:2}} cl ({{profile.highestBingeDate |
                                     date:'dd/MM/yy'}})
                                 </td>
                             </tr>
                             <tr>
                                 <th>Average daily alcohol intake</th>
-                                <td>{{profile.avgAlc | number:2}} cl</td>
+                                <td class="text-right">{{profile.avgAlc | number:2}} cl</td>
                             </tr>
                             <tr>
                                 <th>Average daily alcohol intake (Fri-Sun)</th>
-                                <td>{{profile.avgAlcWeekend | number:2}} cl</td>
+                                <td class="text-right">{{profile.avgAlcWeekend | number:2}} cl</td>
                             </tr>
                             <tr>
                                 <th>Average daily alcohol intake (Mon-Thu)</th>
-                                <td>{{profile.avgAlcWorkWeek | number:2}} cl</td>
+                                <td class="text-right">{{profile.avgAlcWorkWeek | number:2}} cl</td>
                             </tr>
                             <tr>
                                 <th>Consistency factor</th>
-                                <td>{{profile.consistencyFactor | number:3}}</td>
+                                <td class="text-right">{{profile.consistencyFactor | number:3}}</td>
                             </tr>
                             </tbody>
                         </table>
@@ -212,9 +216,35 @@
                         </div>
                     </div>
                 </div>
+                <div class="panel panel-danger">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Recent Activity</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-striped ">
+                            <thead>
+                            <th>Date</th>
+                            <th>Pilsner</th>
+                            <th>Strong Beer</th>
+                            <th>Wine</th>
+                            <th>Liquor</th>
+                            <th>Total Alcohol</th>
+                            </thead>
+                            <body>
+                            <tr ng-repeat="daily in dailyAnalyses | orderBy:'-date' | limitTo: 10">
+                                <th>{{daily.date | date:'EEE dd/MM/yy'}}</th>
+                                <td class="text-right">{{daily.todPilsner}} cl</td>
+                                <td class="text-right">{{daily.todStrongbeer}} cl</td>
+                                <td class="text-right">{{daily.todWine}} cl</td>
+                                <td class="text-right">{{daily.todLiquor}} cl</td>
+                                <td class="text-right"><strong>{{daily.todAlc | number:2}} cl</strong></td>
+                            </tr>
+                            </body>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
-
     </div>
 
 </section>
