--- a/packages/custom/ddb/public/views/home.html
+++ b/packages/custom/ddb/public/views/home.html
@@ -40,8 +40,11 @@
                     </form>
                 </div>
             </div>
-
         </section>
+    </div>
+
+    <div style="height: 100vh">
+
     </div>
 
 </div>
