Added many unit tests

--- a/packages/custom/ddb/public/views/tools.html
+++ b/packages/custom/ddb/public/views/tools.html
@@ -6,7 +6,7 @@
             </h1>
         </div>
 
-        <div class="panel panel-danger">
+      <!--  <div class="panel panel-danger">
             <div class="panel-heading">
                 <h3 class="panel-title">Data importeren uit Google Sheets Drankdatabank</h3>
             </div>
@@ -37,7 +37,7 @@
                     <button ng-click="import()" class="btn btn-primary">Import</button>
                 </form>
             </div>
-        </div>
+        </div>-->
 
         <div class="row">
             <div class="col-md-6">
@@ -54,25 +54,25 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Delete all data</h3>
-                    </div>
-                    <div class="panel-body">
-                        <p>
-                            Clicking this button will delete <strong>all your data</strong>. There is no confirmation.
-                            There
-                            is no
-                            way to undo it.
-                        </p>
-                        <button class="btn btn-primary" ng-click="deleteAll()"><i class="glyphicon glyphicon-ok"/> Delete
-                            all
-                            data
-                        </button>
-                    </div>
-                </div>
-            </div>
+            <!--  <div class="col-md-6">
+                  <div class="panel panel-primary">
+                      <div class="panel-heading">
+                          <h3 class="panel-title">Delete all data</h3>
+                      </div>
+                      <div class="panel-body">
+                          <p>
+                              Clicking this button will delete <strong>all your data</strong>. There is no confirmation.
+                              There
+                              is no
+                              way to undo it.
+                          </p>
+                          <button class="btn btn-primary" ng-click="deleteAll()"><i class="glyphicon glyphicon-ok"/> Delete
+                              all
+                              data
+                          </button>
+                      </div>
+                  </div>
+              </div>-->
         </div>
     </div>
 
