--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -27,8 +27,7 @@
                             <tr>
                                 <th>Heaviest binge</th>
                                 <td class="text-right">{{profile.highestBinge | number:2}} cl
-                                    ({{profile.highestBingeDate |
-                                    date:'dd/MM/yy'}})
+                                    ({{profile.highestBingeDate | date:'dd/MM/yy'}})
                                 </td>
                             </tr>
                             <tr>
