--- a/packages/core/system/public/views/header.html
+++ b/packages/core/system/public/views/header.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
             </button>
             <div class="navbar-brand" href="#">
-                <a href="#" ui-sref="news" ng-if="hdrctr.hdrvars.authenticated">
+                <a href="#" ui-sref="dashboard" ng-if="hdrctr.hdrvars.authenticated">
                     <img src="ddb/assets/img/logo.png" style="height: 30px"/>
                 </a>
                 <img src="ddb/assets/img/logo.png" style="height: 30px" ng-if="!hdrctr.hdrvars.authenticated"/>
@@ -21,7 +21,7 @@
                 <li ng-show="hdrctr.hdrvars.authenticated">
                     <a ui-sref='measurements' ng-click="collapse()"
                        ng-class="{active: isActive('measurements')}">
-                        <i class="glyphicon glyphicon-list"/> &nbsp; Data Entry
+                        <i class="glyphicon glyphicon-list"/> &nbsp; History
                     </a>
                 </li>
                 <li ng-show="hdrctr.hdrvars.authenticated">
