--- a/packages/custom/ddb/public/views/measurements.html
+++ b/packages/custom/ddb/public/views/measurements.html
@@ -59,7 +59,7 @@
             </div>
         </div>
 
-        <div class="panel panel-danger" ng-if="measurement">
+        <div class="panel panel-danger" ng-if="measurement" id="consumptions">
             <div class="panel-heading">
                 <h3 class="panel-title">Consumptions</h3>
             </div>
