Added info buttons to trophies

--- a/packages/custom/ddb/public/assets/css/beerkeeper.css
+++ b/packages/custom/ddb/public/assets/css/beerkeeper.css
@@ -162,3 +162,8 @@ tr.active {
     color: #FF6700 !important;
     opacity: 0.8 !important;
 }
+
+.tooltip-inner {
+    max-width: 200px;
+    width: 200px;
+}
