--- a/packages/custom/ddb/public/views/templates/trophy-ranking.html
+++ b/packages/custom/ddb/public/views/templates/trophy-ranking.html
@@ -1,7 +1,9 @@
 <table class="table table-condensed">
     <thead>
     <tr>
-        <th colspan="3" class="text-center">{{trophyName}}</th>
+        <th colspan="3" class="text-center">{{trophyName}}
+            <i class="glyphicon glyphicon-info-sign pull-right" tooltip="{{trophyDescription}}" tooltip-placement="bottom"/>
+        </th>
     </tr>
     </thead>
     <tr ng-repeat="rank in ranking | limitTo:(showMore ? 20 : 3)" ng-class="{active: $index === 0}">
@@ -10,9 +12,13 @@
         <td class="col-xs-4 text-right">{{rank.value | number:2}}</td>
     </tr>
     <tr ng-hide="showMore || ranking.length <=3">
-        <td colspan="3" class="text-center"><a href="#" ng-click="showMore=true"><small>Show more..</small></a></td>
+        <td colspan="3" class="text-center"><a href="#" ng-click="showMore=true">
+            <small>Show more..</small>
+        </a></td>
     </tr>
     <tr ng-show="showMore">
-        <td colspan="3" class="text-center"><a href="#" ng-click="showMore=false"><small>Show less..</small></a></td>
+        <td colspan="3" class="text-center"><a href="#" ng-click="showMore=false">
+            <small>Show less..</small>
+        </a></td>
     </tr>
 </table>
