--- a/packages/custom/ddb/public/views/group.html
+++ b/packages/custom/ddb/public/views/group.html
@@ -115,7 +115,7 @@
                             <div class="col-sm-4">
                                 <trophy-ranking trophy-name="Pilsner Trophy"
                                                 ranking="ranking.rankingPilsner"
-                                                trophy-description="Awarded to the member who is drinking the most pilsner beer">
+                                                trophy-description="Awarded to the member who is drinking the most regular beer">
                                 </trophy-ranking>
                                 <trophy-ranking trophy-name="Trappist Trophy"
                                                 ranking="ranking.rankingStrongbeer"
