--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -161,7 +161,7 @@
                             </thead>
                             <tbody>
                             <tr>
-                                <th>Pilsner</th>
+                                <th>Beer</th>
                                 <td>{{profile.totPilsner}} cl</td>
                                 <td>{{profile.totAlcPilsner | number:2}} cl</td>
                             </tr>
@@ -226,7 +226,7 @@
                                 <thead>
                                 <th>Date</th>
                                 <th>Total Alcohol</th>
-                                <th>Pilsner</th>
+                                <th>Beer</th>
                                 <th>Strong<br/>Beer</th>
                                 <th>Wine</th>
                                 <th>Liquor</th>
