--- a/packages/custom/ddb/public/views/templates/select-drink.html
+++ b/packages/custom/ddb/public/views/templates/select-drink.html
@@ -1,10 +1,10 @@
-<a href="#">
+<a href="#" style="white-space: normal; border-bottom: 1px dotted #AAAAAA">
     <div class="row">
-        <div class="col-xs-6">
+        <div class="col-xs-9">
             <span bind-html-unsafe="match.label | typeaheadHighlight:query"></span>
             <em>({{match.model.alc * 100 | number:1}}%)</em>
         </div>
-        <div class="col-xs-6 text-right">
+        <div class="col-xs-3g text-right">
             <strong>{{match.model.type | uppercase}}</strong>
         </div>
     </div>
