--- a/packages/custom/ddb/public/views/measurements.html
+++ b/packages/custom/ddb/public/views/measurements.html
@@ -79,7 +79,9 @@
                                 {{consumption.amount}} cl
                             </td>
                             <td class="col-xs-5">
-                                {{consumption.drink.name}}
+                                <a ui-sref="drink({drinkId: consumption.drink._id})" tooltip="See drink details">
+                                    <i class="glyphicon glyphicon-zoom-in"></i> {{consumption.drink.name}}
+                                </a>
                             </td>
                             <td class="col-xs-1 text-right">
                                 <button type="button" class="close" ng-click="removeConsumption(consumption)"
