--- a/packages/core/system/server/views/layouts/default.html
+++ b/packages/core/system/server/views/layouts/default.html
@@ -1,12 +1,11 @@
 <!doctype html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="https://www.facebook.com/2008/fbml" itemscope="itemscope"
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" itemscope="itemscope"
       itemtype="http://schema.org/Product">
 {% include '../includes/head.html' %}
 
 <body ng-cloak class="ng-cloak" ng-class="state">
 <div class="navbar navbar-inverse navbar-fixed-top" data-ng-include="'/system/views/header.html'"
      data-role="navigation"></div>
-<div data-ng-include="'/admin/views/index.html'"></div>
 <section class="content">
     {% block content %}{% endblock %}
 </section>
