--- a/packages/custom/ddb/public/views/templates/track-drinks.html
+++ b/packages/custom/ddb/public/views/templates/track-drinks.html
@@ -68,9 +68,15 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-4 col-sm-8">
-                        <button ng-click="addNewDrink()" class="btn btn-warning"
-                                ng-disabled="!newDrinkForm.$valid">
-                            Add new drink
+                        <button ng-click="addNewDrink()" class="btn btn-primary btn-block"
+                                ng-disabled="!newDrinkForm.$valid || savingDrink">
+                            <div ng-hide="savingDrink">Add new drink</div>
+                            <div class="spinner" ng-show="savingDrink">
+                                <div class="bounce1"></div>
+                                <div class="bounce2"></div>
+                                <div class="bounce3"></div>
+                            </div>
+
                         </button>
                     </div>
                 </div>
@@ -120,9 +126,16 @@
         <div class="col-md-12">
             <div class="form-group">
                 <button type="button" class="btn btn-lg btn-block btn-primary"
-                        ng-disabled="!selectedDrink || !selectedAmount"
+                        ng-disabled="!selectedDrink || !selectedAmount || savingConsumption"
                         ng-click="addConsumption()">
-                    Track it!
+                    <div ng-hide="savingConsumption">
+                        Track it!
+                    </div>
+                    <div class="spinner" ng-show="savingConsumption">
+                        <div class="bounce1"></div>
+                        <div class="bounce2"></div>
+                        <div class="bounce3"></div>
+                    </div>
                 </button>
             </div>
         </div>
