--- a/packages/custom/ddb/public/views/templates/trophy-ranking.html
+++ b/packages/custom/ddb/public/views/templates/trophy-ranking.html
@@ -2,7 +2,7 @@
     <thead>
     <tr>
         <th colspan="3" class="text-center">{{trophyName}}
-            <i class="glyphicon glyphicon-info-sign pull-right" tooltip="{{trophyDescription}}" tooltip-placement="bottom"/>
+            <i class="glyphicon glyphicon-info-sign pull-right" tooltip="{{trophyDescription}}" tooltip-placement="left"/>
         </th>
     </tr>
     </thead>
