--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -183,6 +183,26 @@
                             </tbody>
                         </table>
                     </div>
+                    <div class="panel-body">
+                        <table class="table table-striped ">
+                            <thead>
+                            <th colspan="2">Most Frequent Drinks</th>
+                            <th>
+                                Count
+                                <i class="glyphicon glyphicon-info-sign pull-right"
+                                   tooltip="This table ranks the number of days on which the drinks were consumed at least once"
+                                   tooltip-placement="left"/>
+                            </th>
+                            </thead>
+                            <tbody>
+                            <tr ng-repeat="drink in frequentDrinks">
+                                <th>{{$index + 1}}</th>
+                                <td>{{drink.drink.name}}</td>
+                                <td>{{drink.nbDays}}</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
                 <div class="panel panel-danger">
                     <div class="panel-heading">
