--- a/packages/custom/ddb/public/views/measurements.html
+++ b/packages/custom/ddb/public/views/measurements.html
@@ -12,7 +12,8 @@
                 <div class="row hidden-xs">
                     <div class="col-xs-4 text-left">
                         <button type="button" class="btn btn-primary dropdown-toggle"
-                                ng-click="goToPrevDay()" tooltip="Track data for one day earlier">
+                                ng-click="goToPrevDay()" ng-if="prevDay >= registrationDate"
+                                tooltip="Track data for one day earlier">
                             <i class="glyphicon glyphicon-backward"/> Earlier
                         </button>
                     </div>
