--- a/packages/core/system/server/views/includes/head.html
+++ b/packages/core/system/server/views/includes/head.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="fragment" content="!">
 
-    <title>{{appName}}</title>
+    <title>Beerkeeper | The Social Drinking Network</title>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <meta name="keywords" content="beer measurements analysis statistics wine liquor alcohol drinking game">
     <meta name="description"
@@ -19,6 +19,24 @@
     <meta property="og:image" content="APP_LOGO">
     <meta property="og:site_name" content="Beerkeeper">
     <!--  <meta property="fb:admins" content="APP_ADMIN">-->
+
+    <link rel="apple-touch-icon" sizes="57x57" href="/system/assets/img/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/system/assets/img/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/system/assets/img/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/system/assets/img/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/system/assets/img/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/system/assets/img/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/system/assets/img/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/system/assets/img/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/system/assets/img/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/system/assets/img/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/system/assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/system/assets/img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/system/assets/img/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="/ddb/assets/css/bootstrap.css">
 
