Many small UI tweaks

--- a/packages/core/system/public/views/header.html
+++ b/packages/core/system/public/views/header.html
@@ -10,7 +10,7 @@
             </button>
             <div class="navbar-brand" href="#">
                 <a href="#" ui-sref="dashboard" ng-if="hdrctr.hdrvars.authenticated">
-                    <img src="ddb/assets/img/logo.png" style="height: 30px"/>
+                    <img src="ddb/assets/img/logo.png" style="height: 30px" ng-click="collapse()"/>
                 </a>
                 <img src="ddb/assets/img/logo.png" style="height: 30px" ng-if="!hdrctr.hdrvars.authenticated"/>
             </div>
