--- a/packages/custom/ddb/public/views/dashboard.html
+++ b/packages/custom/ddb/public/views/dashboard.html
@@ -48,7 +48,7 @@
                             </td>
                             <td class="col-xs-1 text-right">
                                 <button type="button" class="close" ng-click="removeConsumption(consumption)"
-                                        aria-label="Close" tooltip="Delete this drink">
+                                        aria-label="Close" tooltip="Delete this drink" tooltip-placement="left">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </td>
