--- a/packages/custom/ddb/public/assets/css/beerkeeper.css
+++ b/packages/custom/ddb/public/assets/css/beerkeeper.css
@@ -1,9 +1,11 @@
 body {
     background: linear-gradient(120deg, #000, #FF6700);
+    min-height: 100vh;
 }
 
 .container {
-    background-color: rgba(0, 0, 0, 0.5)
+    background-color: rgba(0, 0, 0, 0.5);
+    min-height: 100vh;
 }
 
 div.navbar-brand {
