--- a/packages/custom/ddb/public/views/group.html
+++ b/packages/custom/ddb/public/views/group.html
@@ -8,7 +8,13 @@
             </h1>
         </div>
 
-        <div class="row">
+        <div class="spinner" ng-show="!group">
+            <div class="bounce1"></div>
+            <div class="bounce2"></div>
+            <div class="bounce3"></div>
+        </div>
+
+        <div class="row" ng-show="group">
             <div class="col-md-9">
 
                 <div class="row">
