--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -7,7 +7,13 @@
             </h1>
         </div>
 
-        <div class="row">
+        <div class="spinner" ng-show="!profile">
+            <div class="bounce1"></div>
+            <div class="bounce2"></div>
+            <div class="bounce3"></div>
+        </div>
+
+        <div class="row" ng-show="profile">
             <div class="col-md-6">
                 <div class="panel panel-danger">
                     <div class="panel-heading">
